--- a/src/trouverSerie/style.css
+++ b/src/trouverSerie/style.css
@@ -636,5 +636,10 @@
 
   .btnSuivantChoix {
       font-size: 10px;
+      color: #000000;
+  }
+
+  .btnRetourChoix {
+    color: #000000;
   }
 }
